This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix signatures of tp_finalize handlers in testing code.
Type: behavior Stage: resolved
Components: Tests Versions: Python 3.8, Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: miss-islington, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-05-25 08:49 by serhiy.storchaka, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 7111 merged serhiy.storchaka, 2018-05-25 08:50
PR 7124 merged miss-islington, 2018-05-26 07:53
PR 7125 merged miss-islington, 2018-05-26 07:54
Messages (4)
msg317662 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-05-25 08:49
tp_finalize handlers in Modules/_testmultiphase.c and Modules/_testmultiphase.c return int. This signature is incompatible with the signature of the tp_finalize slot. They should not return any value.
msg317730 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-05-26 07:52
New changeset 19de8b3dd742fb53681478ad4fff57ed7c37a953 by Serhiy Storchaka in branch 'master':
bpo-33644: Fix signatures of tp_finalize handlers in testing code. (GH-7111)
https://github.com/python/cpython/commit/19de8b3dd742fb53681478ad4fff57ed7c37a953
msg317731 - (view) Author: miss-islington (miss-islington) Date: 2018-05-26 08:33
New changeset 14d289be60a2ad4cb65990a63ed2e75e9a8cb3ec by Miss Islington (bot) in branch '3.7':
bpo-33644: Fix signatures of tp_finalize handlers in testing code. (GH-7111)
https://github.com/python/cpython/commit/14d289be60a2ad4cb65990a63ed2e75e9a8cb3ec
msg317733 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-05-26 10:17
New changeset 9ba3be4718bdf82e20280980807e054004a9bade by Serhiy Storchaka (Miss Islington (bot)) in branch '3.6':
bpo-33644: Fix signatures of tp_finalize handlers in testing code. (GH-7111) (GH-7125)
https://github.com/python/cpython/commit/9ba3be4718bdf82e20280980807e054004a9bade
History
Date User Action Args
2022-04-11 14:59:00adminsetgithub: 77825
2018-05-26 10:17:24serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-05-26 10:17:11serhiy.storchakasetmessages: + msg317733
2018-05-26 08:33:32miss-islingtonsetnosy: + miss-islington
messages: + msg317731
2018-05-26 07:54:09miss-islingtonsetpull_requests: + pull_request6760
2018-05-26 07:53:11miss-islingtonsetpull_requests: + pull_request6759
2018-05-26 07:52:08serhiy.storchakasetmessages: + msg317730
2018-05-25 08:50:59serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request6750
2018-05-25 08:49:30serhiy.storchakacreate