bpo-33644: Fix signatures of tp_finalize handlers in testing code. (GH-7111) (cherry picked from commit 19de8b3dd742fb53681478ad4fff57ed7c37a953)

Co-authored-by: Serhiy Storchaka <storchaka@gmail.com>